# datagulp

./: .gitignore  Cargo.toml  README.md
resources/: ISO10383_MIC.csv  references.md
src/: cli.rs  main.rs  processor.rs  processor_mmap.rs  stats.rs  transformer.rs
