[package]
name = "datagulp"
version = "0.1.0"
edition = "2024"

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive", "env"] }
env_logger = "0.11"
log = "0.4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# CSV processing
csv = "1.3"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Parallel processing
rayon = "1.10"

# Progress tracking
indicatif = { version = "0.17", features = ["tokio"] }
sysinfo = "0.32"

[dev-dependencies]
tempfile = "3"
criterion = "0.5"

[[bin]]
name = "datagulp"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3